syntax = "proto3";

package matching;

option java_multiple_files = true;
option java_package = "com.rideApp.matching";

service MatchingService {

  rpc MatchRide(MatchRideRequest)
      returns (MatchRideResponse);
}

message MatchRideRequest {
  string ride_id = 1;
  double lat = 2;
  double lng = 3;
}

message MatchRideResponse {
  bool success = 1;
  string driver_id = 2;
}
